--- a/HungHaStore/Areas/Admin/Views/AUser/Index.cshtml
+++ b/HungHaStore/Areas/Admin/Views/AUser/Index.cshtml
@@ -1,6 +1,7 @@
-﻿@model IEnumerable < HungHaStore.Models.nguoi_dung >
+﻿@using PagedList.Mvc
+@model PagedList.IPagedList<HungHaStore.Models.nguoi_dung>
 @{
-    ViewBag.Title = "Index";
+    ViewBag.Title = "Người dùng";
     Layout = "~/Areas/Admin/Views/Shared/_Layout.cshtml";
 }
 
@@ -39,7 +40,7 @@
             <th></th>
         </tr>
     </thead>
-    
+
 
     @foreach (var item in Model)
     {
@@ -63,12 +64,14 @@
                 @Html.DisplayFor(modelItem => item.dia_chi)
             </td>
             <td>
-                @{  
+                @{
                     string gioi_tinh = "";
-                    if(item.gioi_tinh == 0)
+                    if (item.gioi_tinh == 0)
                     {
                         gioi_tinh = "Nam";
-                    }else{
+                    }
+                    else
+                    {
                         gioi_tinh = "Nữ";
                     }
                 }
@@ -88,3 +91,10 @@
     }
 
 </table>
+<div class="row pb-5">
+    <div class="col">
+        <div class="pagination justify-content-md-center">
+            @Html.PagedListPager(Model, page => Url.Action("Index", "AUser", new { page }))
+        </div>
+    </div>
+</div>
