--- a/HungHaStore/Areas/Admin/Views/Shared/_Layout.cshtml
+++ b/HungHaStore/Areas/Admin/Views/Shared/_Layout.cshtml
@@ -36,6 +36,7 @@
                 <a class="p-2 text-white" href="@Url.Action("Index","AUser")">Khách hàng</a>
                 <a class="p-2 text-white" href="@Url.Action("Index","AInvoice")">Hóa đơn</a>
                 <a class="p-2 text-white" href="@Url.Action("Index","AProvider")">Nhà cung cấp</a>
+                <a class="p-2 text-white" href="@Url.Action("Index","AOder")">Đặt hàng</a>
             </nav>
         </div>
     </div>
