--- a/HungHaStore/Views/Cart/Checkout.cshtml
+++ b/HungHaStore/Views/Cart/Checkout.cshtml
@@ -46,7 +46,7 @@
                                     {
                                         <tr>
                                             <td>
-                                                @item.san_pham.ten
+                                                @item.ten_sp
                                             </td>
                                             <td>@item.so_luong</td>
                                             <td>@item.gia_tien</td>
