--- a/HungHaStore/Views/Cart/Index.cshtml
+++ b/HungHaStore/Views/Cart/Index.cshtml
@@ -101,7 +101,7 @@
                         <li>PHỤ <span>0 đ</span></li>
                         <li>TỔNG <span>@String.Format(currency, "{0:c0}", CartHelper.sumMoney())</span></li>
                     </ul>
-                    <a href="@Url.Action("CreateInvoice","Cart")" class="primary-btn">XỬ LÝ HÓA ĐƠN</a>
+                    <a href="@Url.Action("OrderInfo","Cart")" class="primary-btn">ĐẶT HÀNG</a>
                 </div>
             </div>
         </div>
